# MONEY-FEST

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  ai_providers.py  app.py  docker-compose.yml  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  saasshorts.py  thumbnail.py
assets/: README.md
dashboard/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
dashboard/public/: robots.txt  sitemap.xml
dashboard/src/: App.jsx  Landing.jsx  Legal.jsx  index.css  main.jsx
data/: channels.json
docs/: app_layer.md  architecture.md  caption_architecture.md  channel_manager.md  clip_architecture.md  development.md  effects_architecture.md  metadata.md  trends.md  upload_architecture.md
frontend/: README.md  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
remotion/: package.json
render-service/: package-lock.json  package.json
scripts/: README.md
tests/: test_app_pipeline.py  test_app_subtitles.py  test_caption_architecture.py  test_caption_service.py  test_channel_manager.py  test_clip_cutter.py  test_clip_cutting_service.py  test_clip_models.py  test_effects_filters.py  test_effects_models.py  test_effects_processor.py  test_logging.py  test_metadata.py  test_models.py  test_openai_metadata_provider.py  test_openai_segment_selector.py  test_settings.py  test_subtitle_burner.py  test_trend_models.py  test_trend_scan_service.py  test_upload_service.py  test_whisper_transcription_provider.py  test_youtube_trend_provider.py  test_youtube_upload_provider.py
(+104 files in other folders)
